--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Raven</string>
     <string name="title_activity_contacts">ContactsActivity</string>
+    <string name="contacts">Contacts</string>
     <string name="send">SEND</string>
     <string name="back">back</string>
     <string name="add">add</string>
