--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="add">add</string>
     <string name="enter_name">Enter name</string>
     <string name="enter_id">Enter ID</string>
-   
+    <string name="openChat">Open chat</string>
+    <string name="deleteContact">Delete contact</string>
 </resources>
